- fixed the control icons when `compact = TRUE`.
- add two columns of "row_label" and "column_label" in the output of `selectPosition()`, 
  `selectArea()`, `selectByLabels()`.
- `makeInteractiveComplexHeatmap()`: add two new arguments: `show_cell_fun`/`show_layer_fun`
  which controls whether show graphics made by cell_fun/layer_fun on the main heatmap.

------------------------------------------------------------------------------------


Changes in version 1.1.4

- For the three div blocks of heatmap widgets, now `display:table-cell` is used so that
  the positions of divs won't change when changing the size of the browser window.
- Add a new vignette "Share interactive heatmaps to collaborators".

------------------------------------------------------------------------------------

Changes in version 1.1.3

- fontawesome is directly from the fontawesome package.
- also inherit row_names_gp and column_names_gp from the complete heatmap
- content of js and css for specific heatmap is directly add to html instead of
  containing as files

------------------------------------------------------------------------------------

Changes in version 1.1.2

- Add `save` argument in `htShiny()`.

------------------------------------------------------------------------------------

Changes in version 1.1.1

- add new argument `sub_heatmap_cell_fun` and `sub_heatmap_layer_fun` to only set cell_fun
  or layer_fun for sub-heatmaps.

------------------------------------------------------------------------------------

Changes in version 0.99.10

- add `response` argument so that the server can only respond to one event from UI.

------------------------------------------------------------------------------------

Changes in version 0.99.9

- output can be floating along with mouse positions.

------------------------------------------------------------------------------------

Changes in version 0.99.8

- click and hover won't conflict with brush.
