@@ -5,8 +5,8 @@ Version: 1.3.1
 Date: 2022-02-18
 Authors@R: person("Zuguang", "Gu", email = "z.gu@dkfz.de", role = c("aut", "cre"),
                   comment = c('ORCID'="0000-0002-7395-8709"))
-Depends: R (>= 4.0.0), 
-Imports: ComplexHeatmap (>= 2.11.0), grDevices, stats, shiny, grid, GetoptLong, 
+Depends: R (>= 4.0.0), ComplexHeatmap (>= 2.11.0)
+Imports: grDevices, stats, shiny, grid, GetoptLong, 
     S4Vectors (>= 0.26.1), digest, IRanges, kableExtra (>= 1.3.1), utils, svglite,
     htmltools, clisymbols, jsonlite, RColorBrewer, fontawesome
 Suggests: knitr, rmarkdown, testthat, EnrichedHeatmap, GenomicRanges, data.table,
