@@ -6,6 +6,8 @@ Changes in version 1.3.1
   `selectArea()`, `selectByLabels()`.
 - `makeInteractiveComplexHeatmap()`: add two new arguments: `show_cell_fun`/`show_layer_fun`
   which controls whether show graphics made by cell_fun/layer_fun on the main heatmap.
+- `default_click_action()`: numbers show three non-zero digits.
+- `htShiny()`: add `app_options` argument.
 
 ------------------------------------------------------------------------------------
 
